# DynamicGraphStorage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cfg
container/: CMakeLists.txt  config.cfg  container.hpp  container_test.cpp  wrapper_test.cpp
container/apps/: base_2pl.h  base_cow.h  vector2logblock.cpp  vector2pma.cpp  vector2skiplist.cpp  vector2sorted_array.cpp
container/apps/avl2pam_cow/: avl2pam_cow.cpp  avl2pam_cow.h
container/container/: container_2pl.hpp  container_cow.hpp  container_pam.hpp
container/edge_index/: log_block.hpp  pam_tree_cow.hpp  pma.hpp  skiplist.hpp  sorted_array.hpp
container/edge_index/skiplist/: CMakeLists.txt  edge_block.hpp  skiplist.hpp  skiplist_test.cpp
container/transaction/: transaction_2pl.hpp  transaction_cow.hpp  transaction_pam.hpp
container/utils/: bloom_filter.hpp  config.hpp  parallel_functions.hpp  rwlock.hpp  types.hpp
container/utils/PAM/: CMakeLists.txt
container/utils/PAM/include/pam/: basic_node.h  gc.h  map.h  map_ops.h  sequence_ops.h
container/utils/art/: art.c  art.h  art_wrapper.c
container/utils/bloom_filter/: hashutil.h  simd-block-fixed-fpp.cpp  simd-block-fixed-fpp.hpp
container/utils/types/: edge_types.hpp  vertex_types.hpp
container/vertex_index/: avltree_cow.hpp  avltree_vertex.hpp  hashmap.hpp  vector.hpp  vertex_index.cpp
container/vertex_wrapper/: config.cfg  vertex_driver.h  vertex_driver_main.h  vertex_wrapper.h
container/vertex_wrapper/apps/: avl_wrapper.cpp  hashtable_wrapper.cpp  vector_wrapper.cpp
data_process/: wiki.py
data_process/ldbc/: README.md  initial_snapshop.sh  sparse2dense.py  stream.py  syn.py  update_stream.sh  utils.py
driver/: driver.h  driver_main.h
driver/algorithms/: BFS.h  PR.h  SSSP.h  TC.h  TC_intersect.h  TC_opt.h  WCC.h
edge_wrapper/: CMakeLists.txt  config.cfg  edge_driver.h  edge_driver_main.h  edge_wrapper.h
edge_wrapper/apps/: csr_wrapper.cpp  logblock_wrapper.cpp  neo_pam_wrapper.cpp  pam_wrapper.cpp  pma_wrapper.cpp  rb_tree_wrapper.cpp  skiplist_wrapper.cpp  sorted_array_wrapper.cpp  teseo_like_wrapper.cpp  versioned_pam_wrapper.cpp
generator/: CMakeLists.txt  README.md  config.cfg  main.cpp  parser.cpp  parser.hpp  workload_generator.cpp  workload_generator.hpp
libraries/aspen/: CMakeLists.txt
libraries/teseo/: CMakeLists.txt
utils/: commandLineParser.cpp  commandLineParser.hpp  memory_cost.hpp
utils/log/: log.h
wrapper/: CMakeLists.txt  wrapper.h
wrapper/apps/aspen_wrapper/: aspen_wrapper.cpp  aspen_wrapper.h
wrapper/apps/csr_wrapper/: csr_wrapper.cpp  csr_wrapper.h
wrapper/apps/livegraph/: livegraph_wrapper.cpp  livegraph_wrapper.h
wrapper/apps/llama_wrapper/: llama_wrapper.cpp  llama_wrapper.h
wrapper/apps/sortledton_wrapper/: sortledton_wrapper.cpp  sortledton_wrapper.h
wrapper/apps/teseo_wrapper/: teseo_wrapper.cpp  teseo_wrapper.h
